--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -140,16 +140,15 @@
               </div>
               
               
-            <div class="mb-2 d-flex justify-content-center"> 
-              <input type="checkbox"  
-              (click)="isSeller=true">
-              Is Seller?
-            </div>
+    
               <div class="form-group">
                   <button class="btn btn-sm rounded-0 btn4">Register</button>
               </div>
               <p class="ml-5">
                   Already a member?<a href="/login" class="tesx">LOG IN</a>
+                </p>
+                 <p class="ml-5">
+                 You want to join us?<a href="/z" class="tesx">JOIN US?</a>
                 </p>
           </form>
 
@@ -181,5 +180,19 @@
 
 
 
-
-
+<div class="modal fade" id="myModal" role="dialog" >
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="exampleModalLabel">Modal</h4>
+        </div>
+        <div class="modal-body">
+          Modal content
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
