--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -142,7 +142,7 @@
               
     
               <div class="form-group">
-                  <button class="btn btn-sm rounded-0 btn4">Register</button>
+                  <button class="btn btn-sm rounded-0 btn4" data-toggle="modal" data-target="#myModal">Register</button>
               </div>
               <p class="ml-5">
                   Already a member?<a href="/login" class="tesx">LOG IN</a>
@@ -179,16 +179,16 @@
 
 
 
-
 <div class="modal fade" id="myModal" role="dialog" >
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="exampleModalLabel">Modal</h4>
         </div>
         <div class="modal-body">
-          Modal content
+         Enter OTP : 
+         <input type="text" placeholder="otp" [(ngModel)]="otp"/>
+         <button click= "checkOtp()">Submit</button>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
